# hw5_dl

./: config.py  main.py  pyproject.toml  task3.md  task_1.py  task_2.py  task_3.py  task_4.py  task_5.py
data/test_ds/: state.json
data/train_ds/: dataset_info.json  state.json
results/: task_2_results.txt  task_3_results.txt  task_4_1_results.txt  task_4_2_results.txt
