[project]
name = "retrieval-system_dl_hw3"
version = "0.1.0"
description = ""
authors = [
    {name = "Alex",email = "zaranka-14@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch (>=2.7.0,<3.0.0)",
    "datasets (>=3.6.0,<4.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "transformers (>=4.52.3,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
